ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkdink-ingress
  namespace: apps 
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.scheme: https
spec:
  ingressClassName: traefik   # lub nginx – zależnie czego używasz
  rules:
    - host: link.n8nbyczkuuu.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
